test_suite/alan-2022-examples/failing/001800_mutation.alan
source F begin call or e() end
